--- a/shared/hosts.ini
+++ b/shared/hosts.ini
@@ -1,7 +1,14 @@
-[swarm-workers]
+manager     ansible_connection=local
+worker1     ansible_connection=ssh
+worker2     ansible_connection=ssh
+gluster1    ansible_connection=ssh
+gluster1    ansible_connection=ssh
+
+[swarm]
+manager 
 worker1
 worker2
 
-[glusters]
+[glusterfs]
 gluster1
 gluster2
