--- a/shared/gluster.yml
+++ b/shared/gluster.yml
@@ -1,3 +1,5 @@
+#TODO add variable for volume
+
 # This Play Configures GlusterFS Servers
 - hosts: glusterfs
   gather_facts: no
@@ -53,3 +55,10 @@
         path: /mnt/sharedfs
         state: directory
         mode: '0755'
+
+    - name: Mount the shared filesystem
+      mount:
+        name: test2
+        src: gluster1:/test2
+        fstype: glusterfs
+        state: mounted
