docker image now works; instructions on how to launch

--- a/shared/container/Dockerfile
+++ b/shared/container/Dockerfile
@@ -1,5 +1,7 @@
 FROM php:7.4.1-apache
 COPY service/content/ /var/www/html/
 
-ENV UPLOAD_DIR=/tmp/
+ARG host_name
 
+ENV UPLOAD_DIR=/tmp/
+ENV HOST_NAME=$host_name
